Fixed element overflow issue

--- a/style.css
+++ b/style.css
@@ -1,3 +1,8 @@
+* {
+  box-sizing: border-box;
+  overflow: auto;
+}
+
 html,
 body {
   padding: 0;
@@ -97,7 +102,7 @@ header h1 {
   padding: 15px;
 }
 
-.card i,
+.card img,
 .info-group {
   float: left;
   margin: 25px;
